[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/scene_compositor/ui/dialogs/LabelDialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/scene_compositor/core/base/BaseNode.gd" type="Script" id=2]
[ext_resource path="res://addons/scene_compositor/ui/styles/EditorTheme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 49.0
content_margin_right = 49.0
content_margin_top = 42.0
content_margin_bottom = 8.75
bg_color = Color( 0.0745098, 0.0745098, 0.0745098, 0.701961 )
border_width_left = 1
border_width_top = 40
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 0, 0.00784314, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 2.0
expand_margin_right = 2.0
shadow_size = 4

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 49.0
content_margin_right = 49.0
content_margin_top = 42.0
content_margin_bottom = 8.75
bg_color = Color( 0, 0, 0, 0.701961 )
border_width_left = 1
border_width_top = 40
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 0, 0.00784314, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 2.0
expand_margin_right = 2.0
shadow_size = 4

[node name="BaseNode" type="GraphNode"]
anchor_left = -0.000666142
anchor_top = -0.00113688
anchor_right = 0.195334
anchor_bottom = 0.19978
margin_left = -0.317871
margin_top = -0.317871
margin_right = -138.638
margin_bottom = -154.307
rect_min_size = Vector2( 50, 30 )
theme = ExtResource( 3 )
custom_styles/frame = SubResource( 1 )
custom_styles/selectedframe = SubResource( 2 )
title = "BaseNode"
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
color_frame = Color( 1, 0, 0.00784314, 1 )

[node name="TitleDialog" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 49.0
margin_top = 42.0
margin_right = 189.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 0 )

[node name="PreviewImage" type="TextureRect" parent="."]
visible = false
margin_left = 49.0
margin_top = 43.0
margin_right = 189.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 7
[connection signal="closed" from="TitleDialog" to="." method="_on_TitleDialog_closed"]
